# screen_capture

./: .gitignore  CMakeLists.txt  README.md
assets/custom/: mosaic.frag  mosaic.vert
assets/shader/: primitive_smooth_lines_frag.glsl  render_sdftext_frag.glsl  render_text_frag.glsl  shape_batch_frag.glsl
assets/shader/shape/: primitive_smooth_lines_frag.glsl  primitive_smooth_lines_vert.glsl  primitive_triangles_frag.glsl  primitive_triangles_vert.glsl
assets/shader/text/: render_sdftext_frag.glsl
assets/text/font1/: char_config.json
purple/: CMakeLists.txt
purple/assets/shader/: primitive_rect_frag.glsl  shape_batch_frag.glsl
purple/include/: glheader.h  json.h  log.h  purple.h  purple_ui.h  utils.h
purple/include/audio/: audio.h
purple/include/glad/: glad.h  glades.h
purple/include/input/: input_common.h  input_manager.h
purple/include/render/: command.h  common.h  render.h  render_batch.h  shader.h  sprite.h  stb_truetype.h  text_render.h  texture.h  triangle.h  vram.h
purple/include/render/cmd/: cmd_arc.h  cmd_custom_shader.h  cmd_custom_texture_shader.h  cmd_lines.h  cmd_lines_smooth.h  cmd_rect.h  cmd_sdftext.h  cmd_shape.h  cmd_text.h  cmd_text_sdf.h  cmd_triangles.h  command.h
purple/include/render/ui/: drawable.h  view.h
purple/include/resource/: asset_manager.h
purple/include/ui/: color.h  colum_container.h  container.h  img.h  row_container.h  stack_container.h  text.h  ui.h  ui_root.h  widget.h
purple/include/widget/: timer.h
purple/src/: glad.cpp  json.cpp  log.cpp  purple.cpp  utils.cpp
purple/src/audio/: audio.cpp
purple/src/input/: input_manager.cpp
purple/src/render/: command.cpp  render.cpp  render_batch.cpp  shader.cpp  sprite.cpp  text_render.cpp  texture.cpp  triangle.cpp  vram.cpp
purple/src/render/cmd/: cmd_arc.cpp  cmd_custom_shader.cpp  cmd_custom_texture_shader.cpp  cmd_lines.cpp  cmd_lines_smooth.cpp  cmd_rect.cpp  cmd_sdftext.cpp  cmd_shape.cpp  cmd_text.cpp  cmd_text_sdf.cpp  cmd_triangles.cpp  command.cpp
purple/src/render/ui/: drawable.cpp  view.cpp
purple/src/resource/: asset_manager.cpp
purple/src/ui/: color.cpp  colum_container.cpp  container.cpp  img.cpp  row_container.cpp  stack_container.cpp  text.cpp  ui.cpp  ui_root.cpp  widget.cpp
purple/src/widget/: timer.cpp
src/: action_cancel.cpp  action_cancel.h  action_confirm.cpp  action_confirm.h  action_edit.cpp  action_edit.h  action_menu.cpp  action_menu.h  application.cpp  application.h  bridge.cpp  bridge.h  common.h  constants.h  editor.cpp  editor.h  editor_circle.cpp  editor_circle.h  editor_pencil.cpp  editor_pencil.h  editor_rect.cpp  editor_rect.h  main.cpp  menu.cpp  menu.h
src/action/: action_cancel.cpp  action_cancel.h  action_confirm.cpp  action_confirm.h  action_edit.cpp  action_edit.h  action_mosaic.cpp  action_mosaic.h  action_text.cpp  action_text.h  menu.cpp  menu.h
src/config/: constants.cpp  constants.h
src/editor/: editor.cpp  editor.h  editor_circle.cpp  editor_circle.h  editor_mosaic.cpp  editor_mosaic.h  editor_pencil.cpp  editor_pencil.h  editor_rect.cpp  editor_rect.h  editor_text.cpp  editor_text.h
src/platform/: bridge.cpp  bridge.h
vender/glfw/: CMakeLists.txt
